tests/fixtures/invalid/denied_override.etcm
spec Runtime:
  seed: int = Field(default=0, override="deny")

impl base:
  seed: 1

impl child <- base:
  seed: 2
